spec/e2e/constructor/return_value.lit
type Foo {
  init {
    return "result" # error: [line 3] Syntax error at "return": Can't return a value from an initializer.
  }
}
